<resources>
    <string name="app_name">RPG Task Planner</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="main_activity_sign_out_button">Wyloguj się</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_character_creator">CharacterCreator</string>

    <string name="character_name_form_hint">Nazwa postaci</string>
    <string name="empty_statistic">Statystyka</string>
    <string name="character_creator_name_hint">Nazwa postaci</string>
    <string name="character_creator_create_button">Stwórz postać</string>
    <string name="title_activity_task_list">TaskListActivity</string>

    <string name="task_list_add_task_button_text">Nowe zadanie</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>

    <string name="task_detail_default_name">Zadanie</string>
    <string name="task_detail_default_description">Opis zadania</string>
    <string name="task_detail_complete_task">Zakończ zadanie</string>
    <string name="task_detail_default_task_statistic">Statystyka</string>
    <string name="title_activity_add_task">AddTaskActivity</string>

    <string name="add_task_hint">Wprowadź nazwę zadania</string>
    <string name="add_task_hp_hint">HP</string>
    <string name="add_task_resource_hint">Zasób</string>
    <string name="add_task_difficulty">Trudność zadania: %s</string>
    <string name="add_task_gold">Złoto: %s</string>
    <string name="add_task_experience">Doświadczenie: %s</string>
    <string name="add_task_min_end_date">Minimalna data zakończenia: %s</string>
    <string name="add_task_button">Dodaj zadanie</string>
    <string name="add_task_current">Obecnie: %s</string>

    <string name="title_activity_character">CharacterActivity</string>
    <string name="tab1_activity_character">Ekwipunek</string>
    <string name="tab2_activity_character">Statystyki</string>
    <string name="current_level_activity_character">Aktualny poziom: %s</string>
    <string name="current_exp_activity_character">Doświadczenie: %s</string>
    <string name="next_level_exp_activity_character">Następny poziom: %s</string>


    <string name="trophies_activity_character">Osiągnięcia</string>
    <string name="easy_trophies_activity_character">Łatwe</string>
    <string name="medium_trophies_activity_character">Średnie</string>
    <string name="hard_trophies_activity_character">Trudne</string>

    <string name="title_activity_equipment">EquipmentActivity</string>
    <string name="header_activity_equipment">Twój ekwipunek</string>

    <string name="title_activity_item_details">ItemDetailsActivity</string>
    <string name="item_name_activity_item_details">Nazwa przedmiotu</string>
    <string name="required_level_activity_item_details">Wymagany poziom postaci</string>
    <string name="item_type_activity_item_details">Typ przedmiotu</string>
    <string name="enhanced_stat_activity_item_details">Ulepszona statystyka</string>
    <string name="enhancement_value_activity_item_details">Obecna wartość ulepszenia +%s</string>
    <string name="item_description_header_activity_item_details">Opis przedmiotu\n%s</string>
    <string name="equip_button_activity_item_details">Załóż przedmiot</string>

    <string name="title_activity_shop">ShopActivity</string>
    <string name="header_activity_shop">Sklep</string>
    <string name="price_activity_shop">Cena</string>
    <string name="buy_activity_shop">Kup</string>
    <string name="reset_activity_shop">Reset sklepu</string>
    <string name="item_type_activity_shop">Typ przedmiotu %s</string>
    <string name="item_stat_activity_shop">Statystyka przedmiotu</string>
    <string name="current_stat_activity_shop">Obecna statystyka</string>
    <string name="item_name_activity_shop">Nazwa</string>

    <string name="menu_task_list">Zadania</string>
    <string name="menu_character">Postać</string>
    <string name="menu_shop">Sklep</string>
    <string name="menu_main">Ekran główny</string>
    <string name="user_email">Email</string>
    <string name="user_name">Nazwa użytkownika</string>


    <string name="class_warrior">Wojownik</string>
    <string name="class_rogue">Łotr</string>
    <string name="class_mage">Mag</string>

    <string name="stats_cooldown_reduction">Czas odnowienia: %s</string>
    <string name="stats_current_energy_mage">Mana: %s</string>
    <string name="stats_current_energy_warrior">Energia: %s</string>
    <string name="stats_current_energy_rogue">Zwinność: %s</string>
    <string name="stats_experience">Doświadczenie: %s</string>
    <string name="stats_current_health">Zdrowie: %s</string>
    <string name="stats_energy_regen_mage">Regeneracja many: %s</string>
    <string name="stats_energy_regen_warrior">Regeneracja energii: %s</string>
    <string name="stats_energy_regen_rogue">Regeneracja zwinności: %s</string>
    <string name="stats_exp_multiplier">Mnożnik doświadczenia: %s</string>
    <string name="stats_gold_multiplier">Mnożnik złota: %s</string>
    <string name="stats_health_reneg">Regeneracja zdrowia: %s</string>
    <string name="stats_level">Poziom: %s</string>
    <string name="stats_max_energy_mage">Max mana: %s</string>
    <string name="stats_max_energy_warrior">Max energia: %s</string>
    <string name="stats_max_energy_rogue">Max zwinność: %s</string>
    <string name="stats_max_health">Maksymalne zdrowie: %s</string>

    <string name ="database_save_error">Wystąpił błąd podczas zapisu do bazy danych, spróbuj ponownie później</string>
    <string name ="database_save_task">Udało się zapisać zadanie</string>
    <string name ="database_save_task_error">Nie udało się zapisać zadania</string>

    <string name="task_difficulty_easy">Łatwe</string>
    <string name="task_difficulty_medium">Średnie</string>
    <string name="task_difficulty_hard">Trudne</string>

    <string name="task_detail_date_from">Od: %s</string>
    <string name="task_detail_date_to">Do: %s</string>
    <string name="task_status_in_progress">W trakcie</string>
    <string name="task_status_done">Zakończone</string>

    <string name="toast_task_done">Zadanie zakończone</string>
    <string name="toast_cant_finish_task">Nie możesz jeszcze ukończyć tego zadania</string>

    <string name="item_type_belt">Pas</string>
    <string name="item_type_boots">Buty</string>
    <string name="item_type_artifact">Artefakt</string>
    <string name="item_type_armour">Zbroja</string>
    <string name="item_type_offhand">Druga ręka</string>
    <string name="item_type_helmet">Hełm</string>
    <string name="item_type_ring">Pierścień</string>
    <string name="item_type_weapon">Broń</string>

    <string name="item_stats_weapon">Czas odnowienia: +%s</string>
    <string name="item_stats_artifact_mage">Regeneracja many: +%s</string>
    <string name="item_stats_artifact_warrior">Regeneracja energii: +%s</string>
    <string name="item_stats_artifact_rogue">Regeneracja zwinności: +%s</string>
    <string name="item_stats_exp_boots">Mnożnik doświadczenia: +%s</string>
    <string name="item_stats_gold_belt">Mnożnik złota: +%s</string>
    <string name="item_stats_gold_offhand">Mnożnik złota: +%s</string>
    <string name="item_stats_ring">Regeneracja zdrowia: +%s</string>
    <string name="item_stats_helmet_mage">Max mana: +%s</string>
    <string name="item_stats_helmet_warrior">Max energia: +%s</string>
    <string name="item_stats_helmet_rogue">Max zwinność: +%s</string>
    <string name="item_stats_armour">Maksymalne zdrowie: +%s</string>

    <string name="toast_item_too_expensive">Nie masz wystarczającej ilości złota</string>
    <string name="toast_item_bought">Przedmiot został zakupiony</string>
    <string name="toast_item_bought_error">Wystąpił błąd podczas kupowania przedmiotu</string>
    <string name="shop_empty_item_name">-</string>
    <string name="current_gold_shop">Twoje złoto %s</string>
    <string name="current_gold_activity_character">Złoto %s</string>
    <string name="item_equipped_item_details_fragment">Założono przedmiot %s</string>
    <string name="toast_account_created">Konto utworzone\\nMożesz się teraz zalogować</string>
    <string name="toast_orb_refresh">%s/%s\nNastępne odświeżenie o wartość: %s\nNastąpi: %s</string>
    <string name="menu_share">Udostępnij</string>
    <string name="menu_character_hello">Hello %s!</string>
    <string name="app_hashtag">RPGTaskPlanner</string>
    <string name="facebook_post_content">%s ma już %s poziom\nWykonane zadania:\n- Łatwe: %s\n- Średnie: %s\n- Trudne: %s\n</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Hasło</string>
    <string name="sign_up_repeat_password">Powtórz hasło</string>
    <string name="sign_up_sign_up">Zarejestruj</string>
    <string name="sign_up_already_registered">Masz już konto? Zaloguj się!</string>
    <string name="sign_in_sign_in">Zaloguj się</string>
    <string name="sign_in_with_google">Zaloguj przez Google</string>
    <string name="sign_in_sign_up">Zarejestruj się</string>
    <string name="toast_empty_fields">Puste pola są niedozwolone!</string>
    <string name="toast_password_not_matching">Hasła nie są identyczne!</string>
    <string name="toast_task_already_done">Zadanie zostało już zakończone</string>


</resources>