<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/button_color">

    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/price_activity_shop"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemNameTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/item_name_activity_shop"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/item_type_activity_shop"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/itemNameTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_shape_light_color"
        android:text="@string/buy_activity_shop" />

    <TextView
        android:id="@+id/itemStatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/item_stat_activity_shop"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/currentStatisticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:layout_alignTop="@id/itemStatTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/current_stat_activity_shop"
        android:textSize="16sp" />

</RelativeLayout>
