<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/trophies_activity_character"
        android:background="@color/button_color"
        android:layout_marginHorizontal="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/rpg_logo_sm"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:gravity="center"
        android:text="@string/easy_trophies_activity_character"
        android:layout_below="@id/imageView1"
        android:layout_alignStart="@id/imageView1"
        android:paddingHorizontal="5dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="16dp"

        android:src="@drawable/rpg_logo_sm"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:gravity="center"
        android:text="@string/medium_trophies_activity_character"
        android:layout_below="@id/imageView2"
        android:layout_alignStart="@id/imageView2"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="16dp"
        android:src="@drawable/rpg_logo_sm"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:gravity="center"
        android:text="@string/hard_trophies_activity_character"
        android:layout_below="@id/imageView3"
        android:layout_alignEnd="@id/imageView3"/>

</RelativeLayout>
