<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCharacterName"
            android:minWidth="220dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_gravity="center"
            android:paddingVertical="5dp"
            android:textSize="32dp"
            android:background="@drawable/rounded_shape"
            android:text="@string/app_name"

            android:gravity="center"/>

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="600dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:rowCount="3"
            android:columnCount="2"
            android:padding="20dp"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="25dp"
                android:id="@+id/menu_task_list"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/list"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewGoldReward"
                        android:text="@string/menu_task_list"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:background="@color/button_color"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:id="@+id/menu_character"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="25dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"

                    android:padding="15dp">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/astarion"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewExpReward"
                        android:text="@string/menu_character"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:background="@color/button_color"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:id="@+id/menu_shop"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="25dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"

                    android:padding="15dp">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/coin_icon"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewStartDate"
                        android:text="@string/menu_shop"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:background="@color/button_color"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:id="@+id/menu_share"
                app:cardBackgroundColor="@color/button_color"
                app:cardCornerRadius="25dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"

                    android:padding="15dp">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/share"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewEndDate"
                        android:text="@string/menu_share"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:background="@color/button_color"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_shape"
            android:text="@string/main_activity_sign_out_button"
            />

    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/menu_main"/>

</androidx.drawerlayout.widget.DrawerLayout>